--- a/Taylr/Base.lproj/Main.storyboard
+++ b/Taylr/Base.lproj/Main.storyboard
@@ -171,42 +171,48 @@
                                                     </connections>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Taylor Swift" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="liE-Iz-QQI">
-                                                    <rect key="frame" x="97" y="19" width="92" height="21"/>
+                                                    <rect key="frame" x="97" y="30" width="92" height="21"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="updated 5m ago" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zRz-eM-Pe7">
-                                                    <rect key="frame" x="97" y="40" width="120" height="20"/>
+                                                    <rect key="frame" x="97" y="51" width="120" height="20"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <color key="textColor" red="0.56947487592697144" green="0.56597548723220825" blue="0.54249739646911621" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-disclosure" translatesAutoresizingMaskIntoConstraints="NO" id="XG2-0u-Xfb">
-                                                    <rect key="frame" x="581" y="25" width="11" height="29"/>
-                                                </imageView>
+                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="UhH-a0-qxF">
+                                                    <rect key="frame" x="572" y="30" width="20" height="20"/>
+                                                </activityIndicatorView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wDP-LB-Cob">
+                                                    <rect key="frame" x="580" y="28" width="12" height="24"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstAttribute="centerY" secondItem="UhH-a0-qxF" secondAttribute="centerY" id="11D-lR-lwP"/>
                                                 <constraint firstItem="4Uc-p6-gzK" firstAttribute="top" secondItem="4hE-7L-rNx" secondAttribute="topMargin" constant="2" id="3zx-9n-aha"/>
                                                 <constraint firstItem="liE-Iz-QQI" firstAttribute="leading" secondItem="4Uc-p6-gzK" secondAttribute="trailing" constant="16" id="Blx-yv-Naj"/>
-                                                <constraint firstAttribute="centerY" secondItem="4Uc-p6-gzK" secondAttribute="centerY" id="J6A-qY-lhK"/>
+                                                <constraint firstItem="4Uc-p6-gzK" firstAttribute="centerY" secondItem="liE-Iz-QQI" secondAttribute="centerY" priority="749" constant="11" id="HNl-af-LDp"/>
+                                                <constraint firstItem="wDP-LB-Cob" firstAttribute="trailing" secondItem="4hE-7L-rNx" secondAttribute="trailingMargin" id="HyW-La-LOs"/>
                                                 <constraint firstItem="zRz-eM-Pe7" firstAttribute="leading" secondItem="liE-Iz-QQI" secondAttribute="leading" id="Jhk-mP-idp"/>
-                                                <constraint firstItem="liE-Iz-QQI" firstAttribute="top" secondItem="4hE-7L-rNx" secondAttribute="topMargin" constant="11" id="OBJ-Li-sdz"/>
+                                                <constraint firstAttribute="centerY" secondItem="wDP-LB-Cob" secondAttribute="centerY" id="Pwq-vi-YtG"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="4Uc-p6-gzK" secondAttribute="bottom" id="TVW-oX-YfT"/>
                                                 <constraint firstItem="4Uc-p6-gzK" firstAttribute="leading" secondItem="4hE-7L-rNx" secondAttribute="leadingMargin" constant="12" id="XQj-Cg-EDs"/>
-                                                <constraint firstAttribute="centerY" secondItem="XG2-0u-Xfb" secondAttribute="centerY" id="gPw-PO-Mwp"/>
-                                                <constraint firstItem="XG2-0u-Xfb" firstAttribute="trailing" secondItem="4hE-7L-rNx" secondAttribute="trailingMargin" id="pfy-gE-iKv"/>
+                                                <constraint firstItem="UhH-a0-qxF" firstAttribute="trailing" secondItem="4hE-7L-rNx" secondAttribute="trailingMargin" id="amR-nr-Pzw"/>
                                                 <constraint firstItem="zRz-eM-Pe7" firstAttribute="top" secondItem="liE-Iz-QQI" secondAttribute="bottom" id="qOU-Gu-89E"/>
+                                                <constraint firstItem="4Uc-p6-gzK" firstAttribute="centerY" secondItem="liE-Iz-QQI" secondAttribute="centerY" id="tTG-N8-kRZ"/>
                                             </constraints>
-                                            <variation key="default">
-                                                <mask key="constraints">
-                                                    <exclude reference="J6A-qY-lhK"/>
-                                                </mask>
-                                            </variation>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="avatarView" destination="4Uc-p6-gzK" id="NF5-ki-BX7"/>
+                                            <outlet property="badgeLabel" destination="wDP-LB-Cob" id="e3z-Md-Y3W"/>
+                                            <outlet property="nameCenterConstraint" destination="tTG-N8-kRZ" id="WQa-gL-PmN"/>
                                             <outlet property="nameLabel" destination="liE-Iz-QQI" id="NWC-nL-NKm"/>
+                                            <outlet property="spinner" destination="UhH-a0-qxF" id="3xS-KL-ACS"/>
                                             <outlet property="subtitleLabel" destination="zRz-eM-Pe7" id="3eu-R2-ycm"/>
                                             <segue destination="kBv-HD-oBL" kind="show" identifier="ChatsToConversation" id="Hrk-zE-6Yh"/>
                                         </connections>
@@ -730,13 +736,12 @@
         <image name="ic-back" width="17" height="23"/>
         <image name="ic-back-white" width="10" height="23"/>
         <image name="ic-chats" width="32" height="32"/>
-        <image name="ic-disclosure" width="11" height="29"/>
         <image name="ic-me" width="34" height="35"/>
         <image name="sample-cover-image" width="579" height="214"/>
         <image name="sample-taylor-avatar" width="66" height="67"/>
         <image name="sample-taylor-avatar-square" width="167" height="168"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Fwv-Pj-RXP"/>
+        <segue reference="5pS-f2-tIU"/>
     </inferredMetricsTieBreakers>
 </document>
