--- a/Taylr/Base.lproj/Main.storyboard
+++ b/Taylr/Base.lproj/Main.storyboard
@@ -422,6 +422,81 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TextCell" rowHeight="111" id="EvT-5v-bQF">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="EvT-5v-bQF" id="69N-hZ-r8o">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dRj-6G-3AS" userLabel="Timeline">
+                                                    <rect key="frame" x="58" y="0.0" width="4" height="111"/>
+                                                    <color key="backgroundColor" red="0.8862745098" green="0.8862745098" blue="0.8862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="4" id="3P0-lC-4z0"/>
+                                                    </constraints>
+                                                </view>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-twitter" translatesAutoresizingMaskIntoConstraints="NO" id="4rT-pj-fC0">
+                                                    <rect key="frame" x="46" y="10" width="28" height="28"/>
+                                                </imageView>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pcn-GT-N6a">
+                                                    <rect key="frame" x="99" y="8" width="268" height="95"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remembering this incredible Manchester crowd from the other night, and getting ALL EXCITED FOR HYDE PARK TOMORROW. " lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.94999999999999996" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bGD-9B-jA6">
+                                                            <rect key="frame" x="8" y="8" width="252" height="79"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstItem="bGD-9B-jA6" firstAttribute="leading" secondItem="Pcn-GT-N6a" secondAttribute="leading" constant="8" id="18w-fd-sJo"/>
+                                                        <constraint firstItem="bGD-9B-jA6" firstAttribute="top" secondItem="Pcn-GT-N6a" secondAttribute="top" constant="8" id="Is0-Xp-MgR"/>
+                                                        <constraint firstAttribute="trailing" secondItem="bGD-9B-jA6" secondAttribute="trailing" constant="8" id="sJK-Ur-m6Z"/>
+                                                        <constraint firstAttribute="bottom" secondItem="bGD-9B-jA6" secondAttribute="bottom" constant="8" id="yKR-rT-Yd2"/>
+                                                    </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                            <real key="value" value="10"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                            <real key="value" value="1"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                            <color key="value" red="0.59215686274509804" green="0.59215686274509804" blue="0.59215686274509804" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </view>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l0T-5v-smf" userLabel="Divider">
+                                                    <rect key="frame" x="0.0" y="110" width="375" height="1"/>
+                                                    <color key="backgroundColor" red="0.8862745098" green="0.8862745098" blue="0.8862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="1" id="fwh-5h-l5n"/>
+                                                        <constraint firstAttribute="width" constant="4" id="lws-wL-7kX"/>
+                                                    </constraints>
+                                                    <variation key="default">
+                                                        <mask key="constraints">
+                                                            <exclude reference="lws-wL-7kX"/>
+                                                        </mask>
+                                                    </variation>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="4rT-pj-fC0" firstAttribute="top" secondItem="69N-hZ-r8o" secondAttribute="topMargin" constant="2" id="6Sf-Uh-Btc"/>
+                                                <constraint firstAttribute="bottom" secondItem="dRj-6G-3AS" secondAttribute="bottom" id="7kR-JT-uvx"/>
+                                                <constraint firstItem="dRj-6G-3AS" firstAttribute="leading" secondItem="69N-hZ-r8o" secondAttribute="leadingMargin" constant="50" id="80w-eY-ptx"/>
+                                                <constraint firstItem="dRj-6G-3AS" firstAttribute="top" secondItem="69N-hZ-r8o" secondAttribute="top" id="QnA-Pj-JYt"/>
+                                                <constraint firstItem="Pcn-GT-N6a" firstAttribute="top" secondItem="69N-hZ-r8o" secondAttribute="top" constant="8" id="Ylm-sw-5cW"/>
+                                                <constraint firstItem="l0T-5v-smf" firstAttribute="leading" secondItem="69N-hZ-r8o" secondAttribute="leading" id="dtQ-vn-jhn"/>
+                                                <constraint firstAttribute="bottom" secondItem="Pcn-GT-N6a" secondAttribute="bottom" constant="8" id="jX3-Fw-X5p"/>
+                                                <constraint firstItem="dRj-6G-3AS" firstAttribute="centerX" secondItem="4rT-pj-fC0" secondAttribute="centerX" id="tv0-jU-Y2h"/>
+                                                <constraint firstAttribute="trailing" secondItem="l0T-5v-smf" secondAttribute="trailing" id="vI7-nO-leA"/>
+                                                <constraint firstItem="Pcn-GT-N6a" firstAttribute="leading" secondItem="dRj-6G-3AS" secondAttribute="trailing" constant="37" id="vNF-BK-rQM"/>
+                                                <constraint firstAttribute="trailing" secondItem="Pcn-GT-N6a" secondAttribute="trailing" constant="8" id="ySG-9v-U6L"/>
+                                                <constraint firstAttribute="bottom" secondItem="l0T-5v-smf" secondAttribute="bottom" id="zRK-Q4-IHd"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                 </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="O0f-xd-Ps7" id="KL6-aS-Xne"/>
@@ -824,6 +899,7 @@
         <image name="ic-chats" width="32" height="32"/>
         <image name="ic-instagram" width="28" height="28"/>
         <image name="ic-me" width="34" height="35"/>
+        <image name="ic-twitter" width="28" height="28"/>
         <image name="sample-cover-image" width="579" height="214"/>
         <image name="sample-taylor-avatar" width="66" height="67"/>
         <image name="sample-taylor-avatar-square" width="167" height="168"/>
